improved version of navbar with little work in footer sector also

--- a/Fronted_Portfolio/index.html
+++ b/Fronted_Portfolio/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
 
 
-    <link rel="icon" type="image/svg+xml" href="Untitled_design__4_-removebg-preview.png" className ="rounded-full" />
+    <link rel="icon" type="image/svg+xml" href="web_logo.png"/>
 
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>fronted-portfolio</title>
+    <title>Dipesh's Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
